CRLF in .svg + add .svg in dos2unix + align src with prod + fix realign script

--- a/wamp-src/www/styles/header.css
+++ b/wamp-src/www/styles/header.css
@@ -100,8 +100,7 @@ input[type=button]:hover,#header_login input[type=button]:hover {
 #body {
 	clear:both;
 	font-size:12px;
-	margin:0px;
-	padding-top:3px;
+	margin:10px;
 }
 
 #footer {
